[gd_scene load_steps=9 format=3 uid="uid://dr5dnlpvk5jmi"]

[ext_resource type="Script" path="res://board/game_sounds.gd" id="1_43d01"]
[ext_resource type="AudioStream" uid="uid://sadb4yju1boo" path="res://assets/sound/Backgammon.wav" id="2_4cuyg"]
[ext_resource type="AudioStream" uid="uid://2qskbvjslm2w" path="res://assets/sound/switch15.ogg" id="3_knh33"]
[ext_resource type="AudioStream" uid="uid://gwv2nagdrwnb" path="res://assets/sound/EFX EXT GROUP Female Celebration Scream 01 A .wav" id="4_0ckwq"]
[ext_resource type="AudioStream" uid="uid://cdr36odfjikhp" path="res://assets/sound/confirmation_003.ogg" id="5_06x1s"]

[sub_resource type="Animation" id="Animation_ghwbn"]
length = 8.0
step = 0.1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CelebrationSound:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_j4yr8"]
resource_name = "celebration"
length = 10.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CelebrationSound")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 8.53333),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [0.0],
"method": &"play"
}, {
"args": [],
"method": &"stop"
}]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CelebrationSound:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(12, -0.25, 0, 0.25, 0, -22, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.0333333, 8.5)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_synkg"]
_data = {
"RESET": SubResource("Animation_ghwbn"),
"celebration": SubResource("Animation_j4yr8")
}

[node name="GameSounds" type="Node"]
script = ExtResource("1_43d01")

[node name="PieceSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_4cuyg")

[node name="NewTurnSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_knh33")

[node name="CelebrationSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_0ckwq")

[node name="CelebrationFadeOut" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_synkg")
}

[node name="MenuEnter" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_06x1s")
volume_db = -9.176
pitch_scale = 0.83
